# mnspinfo

./: COPYING  Makefile.am  README.md  configure.ac  do-it  setup-env
src/: Makefile.am  diag.txt  linux_procutils.c  mnspinfo.c  mnspinfo.h  mnspinfo_freebsd.c  mnspinfo_freebsd.h  mnspinfo_linux.c  mnspinfo_linux.h  mnspinfo_posix.c  mnspinfo_private.h  spinfo.c  spinfo.h  spinfo_freebsd.c  spinfo_freebsd.h  spinfo_linux.c  spinfo_linux.h  spinfo_posix.c  spinfo_private.h
test/: Makefile.am  procgauges.c  procgauges.h  testfoo.c  testparse.c  testrusage.c
